--- a/src/main/java/dev/gl/calc/MainWindow.form
+++ b/src/main/java/dev/gl/calc/MainWindow.form
@@ -28,6 +28,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Exit"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="exitMenuItemActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
@@ -147,7 +150,7 @@
                       <Dimension value="[64, 30]"/>
                     </Property>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[64, 30]"/>
+                      <Dimension value="[500, 30]"/>
                     </Property>
                   </Properties>
                 </Component>
@@ -187,7 +190,7 @@
                       <Dimension value="[64, 30]"/>
                     </Property>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[64, 30]"/>
+                      <Dimension value="[250, 30]"/>
                     </Property>
                   </Properties>
                 </Component>
@@ -385,7 +388,7 @@
                     <Property name="text" type="java.lang.String" value="0"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JButton" name="separatorButton">
+                <Component class="javax.swing.JButton" name="decimalButton">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="."/>
                   </Properties>
