Operations with memory have been added

--- a/src/main/java/dev/gl/calc/main/gui/MainWindow.form
+++ b/src/main/java/dev/gl/calc/main/gui/MainWindow.form
@@ -226,6 +226,7 @@
                       <Color blue="0" green="0" red="0" type="rgb"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="MC"/>
+                    <Property name="enabled" type="boolean" value="false"/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JButton" name="mrButton">
@@ -237,6 +238,7 @@
                       <Color blue="0" green="0" red="0" type="rgb"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="MR"/>
+                    <Property name="enabled" type="boolean" value="false"/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JButton" name="mAddButton">
