--- a/src/main/java/dev/gl/calc/main/gui/MainWindow.form
+++ b/src/main/java/dev/gl/calc/main/gui/MainWindow.form
@@ -16,6 +16,9 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="saveMenuItem">
               <Properties>
+                <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.editors.KeyStrokeEditor">
+                  <KeyStroke key="Ctrl+S"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Save..."/>
               </Properties>
             </MenuItem>
