--- a/src/main/java/dev/gl/calc/main/gui/SettingsDialog.form
+++ b/src/main/java/dev/gl/calc/main/gui/SettingsDialog.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="Settings"/>
@@ -56,7 +56,7 @@
                 <Property name="text" type="java.lang.String" value="Scale:"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="jTextField1">
+            <Component class="javax.swing.JTextField" name="scaleTextField">
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel2">
               <Properties>
