--- a/src/main/java/dev/gl/calc/main/gui/AboutDialog.form
+++ b/src/main/java/dev/gl/calc/main/gui/AboutDialog.form
@@ -3,7 +3,9 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="title" type="java.lang.String" value="About"/>
+    <Property name="title" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+      <ResourceString bundle="dict.properties" key="about_title" replaceFormat="Configuration.getResourceBundle().getString(&quot;{key}&quot;)"/>
+    </Property>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[400, 240]"/>
     </Property>
@@ -111,7 +113,9 @@
               <SubComponents>
                 <Component class="javax.swing.JLabel" name="homeLabel">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="Home: "/>
+                    <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+                      <ResourceString bundle="dict.properties" key="about_home" replaceFormat="Configuration.getResourceBundle().getString(&quot;{key}&quot;)"/>
+                    </Property>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JLabel" name="homeLinkLabel">
@@ -135,7 +139,9 @@
                   <SubComponents>
                     <Component class="javax.swing.JLabel" name="creditsLabel">
                       <Properties>
-                        <Property name="text" type="java.lang.String" value="Credits: "/>
+                        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+                          <ResourceString bundle="dict.properties" key="about_credits" replaceFormat="Configuration.getResourceBundle().getString(&quot;{key}&quot;)"/>
+                        </Property>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JLabel" name="creditsLinkLabel">
